--- a/app/package.json
+++ b/app/package.json
@@ -1,12 +1,15 @@
 {
   "name": "salus-healthcare",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix"
   },
   "private": true,
   "dependencies": {
@@ -27,9 +30,16 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.4",
+    "@angular-eslint/builder": "^19.5.0",
+    "@angular-eslint/eslint-plugin": "^19.5.0",
+    "@angular-eslint/eslint-plugin-template": "^19.5.0",
+    "@angular-eslint/template-parser": "^19.5.0",
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.27.0",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
