--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         working-directory: ./app
 
       - name: Run ESLint
-        run: npx eslint . --ext .js,.jsx,.ts,.tsx --fix
+        run: npm run lint
         working-directory: ./app
 
   test:
