init config ci/cd

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,66 +1,22 @@
-name: CI/CD Salus Healthcare Project
+name: CI/CD Healthcare Frontend Project
 
 on:
   push:
     branches:
       - main # Trigger on pushes to the 'main' branch
-  pull_request:
-    branches:
-      - main # Trigger on pull requests to 'main'
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} # Your GCP Project ID
-  GKE_CLUSTER_NAME: autopilot-cluster-1
-  GKE_CLUSTER_ZONE: us-central1
-  REPOSITORY_NAME: healthcare-frontend
-  IMAGE_NAME: salus-frontend
-  # Use the commit SHA as the image tag for unique versions
-  IMAGE_TAG: ${{ github.sha }}
-  GCR_HOSTNAME: us-central1-docker.pkg.dev
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} # Optional, if you want to store project ID as a secret
+  GKE_CLUSTER: cluster-2 # Your GKE cluster name
+  GKE_NAMESPACE: default # Namespace where your Angular app will be deployed
+  AR_REGION: us-central1 # Artifact Registry region
+  AR_REPO_NAME: healthcare-frontend # Your Artifact Registry repository name
+  IMAGE_NAME: app # Name for your Docker image
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install Node.js dependencies
-        run: npm install
-        working-directory: ./app
-
-      - name: Run ESLint
-        run: npm run lint
-        working-directory: ./app
-
-  test:
-    runs-on: ubuntu-latest
-    needs: lint
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-
-      - name: Install Node.js dependencies
-        run: npm install
-        working-directory: ./app
-
-      - name: Run tests
-        run: npm test -- --watch=false --browsers=ChromeHeadless
-        working-directory: ./app
-
   build-and-deploy:
-    runs-on: ubuntu-latest
-    needs: test
+    runs-on: ubuntu-latest # Runner environment
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -68,52 +24,52 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: "20" # Or your specific Node.js version
 
-      - name: Install Node.js dependencies
+      - name: Install Angular CLI (if needed for build)
+        run: npm install -g @angular/cli@latest # Or your specific Angular CLI version
+
+      - name: Install dependencies
         run: npm install
-        working-directory: ./app
+
+      - name: Build Angular application
+        run: npm run build -- --configuration=production # Adjust if you have a custom build script
 
       - name: Authenticate to Google Cloud
-        id: "auth"
-        uses: "google-github-actions/auth@v2"
+        uses: google-github-actions/auth@v2
         with:
-          credentials_json: "${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}"
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up Google Cloud SDK
+      - name: Configure Docker to use Artifact Registry
+        run: |
+          gcloud auth configure-docker ${AR_REGION}-docker.pkg.dev
+
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${AR_REGION}-docker.pkg.dev/${PROJECT_ID}/${AR_REPO_NAME}/${IMAGE_NAME}:${{ github.sha }} .
+          docker push ${AR_REGION}-docker.pkg.dev/${PROJECT_ID}/${AR_REPO_NAME}/${IMAGE_NAME}:${{ github.sha }}
+        id: docker_build_and_push # Give this step an ID to reference its outputs (optional)
+
+      - name: Set up gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ env.PROJECT_ID }}
 
-      - name: Configure Docker to use gcloud as a credential helper
-        run: gcloud auth configure-docker ${GCR_HOSTNAME}
-
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${GCR_HOSTNAME}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ./app
-          docker push ${GCR_HOSTNAME}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-          # Also push with 'latest' tag for convenience, but use SHA for deployments
-          docker tag ${GCR_HOSTNAME}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} ${GCR_HOSTNAME}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${GCR_HOSTNAME}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:latest
-
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet
-
       - name: Get GKE credentials
-        run: gcloud container clusters get-credentials ${{ env.GKE_CLUSTER_NAME }} --zone ${{ env.GKE_CLUSTER_ZONE }} --project ${{ env.PROJECT_ID }}
+        run: |
+          gcloud container clusters get-credentials ${GKE_CLUSTER} --project ${PROJECT_ID}
 
       - name: Deploy to GKE
         run: |
-          # Replace the image tag in the deployment manifest
-          # This command ensures the image is updated with the new tag
-          sed -i "s|image: gcr.io/<YOUR_PROJECT_ID>/healthcare-backend:latest|image: ${GCR_HOSTNAME}/${{ env.PROJECT_ID }}/${{ env.REPOSITORY_NAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}|g" kubernetes/deployment.yaml
-          
-          # Apply the Kubernetes manifests
-          kubectl apply -f kubernetes/deployment.yaml
-          kubectl apply -f kubernetes/service.yaml
+          # Use sed or envsubst to replace the image placeholder in your deployment.yaml
+          # This is needed because GitHub Actions doesn't have a direct 'gke-deploy' equivalent
+          # that replaces image like Cloud Build does out-of-the-box.
+          # We'll use the specific image tag from this build (github.sha).
+          IMAGE_TAG="${AR_REGION}-docker.pkg.dev/${PROJECT_ID}/${AR_REPO_NAME}/${IMAGE_NAME}:${{ github.sha }}"
 
-      - name: Check Deployment Status (optional)
-        run: |
-          kubectl rollout status deployment/node-backend-deployment --timeout=300s
-          kubectl get service node-backend-service
+          # Replace the placeholder in deployment.yaml
+          sed -i "s|image: \${_IMAGE}|image: ${IMAGE_TAG}|g" kubernetes/deployment.yaml
+
+          # Apply the Kubernetes manifests
+          kubectl apply -f kubernetes/
+        id: deploy_to_gke
