--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 /bazel-out
 
 # Node
-/node_modules
+*/node_modules
 npm-debug.log
 yarn-error.log
 package-lock.json
@@ -30,7 +30,7 @@ package-lock.json
 .history/*
 
 # Miscellaneous
-/.angular/cache
+*/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
