--- a/app/.gitignore
+++ b/app/.gitignore
@@ -7,13 +7,13 @@
 /bazel-out
 
 # Node
-*/node_modules
+node_modules
 npm-debug.log
 yarn-error.log
 package-lock.json
 
 # IDEs and editors
-.idea/
+/*/.idea/
 .project
 .classpath
 .c9/
@@ -30,7 +30,7 @@ package-lock.json
 .history/*
 
 # Miscellaneous
-*/.angular/cache
+/.angular/cache
 .sass-cache/
 /connect.lock
 /coverage
