--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
 
   build-and-deploy:
     runs-on: ubuntu-latest # Runner environment
-
+    needs: test
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
