Fix: Añadido soporte para tipos de Node en la configuración de TypeScript

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -18,6 +18,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "baseUrl": "./",
+    "types": ["node"],
     "paths": {
       "@environments/*": ["./src/environments/*"]
     }
